# cp-template

./: CMakeLists.txt  debug.h  init.sh  template.cpp
oj/: prepare.config.toml  sync.sh
src/: B.cpp  main.cpp
